# short-term-load-forecasting-with-domain-knowledge

./: .gitignore  2022_weather_data_06_run_summer.csv  2023_weather_data_06_run_summer.csv  README.md  evaluation.sh  evaluation_nonpv.sh  evaluation_pv.sh  model_config.yaml  model_finetune_config.yaml  pyproject.toml  tensor_overview.md  tft_paper_training.job  training.job
configs/: local_model_config.yaml  local_model_finetune_config.yaml  tft_baseline_config.yaml  tft_baseline_finetune_config.yaml  tft_baseline_finetuned_v1.yaml  tft_semantic_config.yaml  tft_semantic_finetune_config.yaml  tft_semantic_finetuned_v1.yaml
notebooks/: 2023-06-amsterdam-actuals.csv  base_notebook_example.ipynb  debugging_nan_loss.ipynb  evaluation.ipynb  import_data.ipynb  lstm_example.ipynb  methodology.ipynb  tft_example.ipynb
src/neuro_symbolic_demand_forecasting/: main_finetune.py  main_predict.py  main_train.py
src/neuro_symbolic_demand_forecasting/darts/: cleaning.py  custom_modules.py  loss.py
src/neuro_symbolic_demand_forecasting/database/: postgres.py  snowflake.py  weather_postgres.py
src/resources/: __init__.py  knmi_actuals_10_min_stations.csv  knw_grid.csv
work_scripts/: README.md  baseline_finetune_job.job  finetune_job.job  tft_baseline_training.job  tft_paper_training.job  tft_semantic_training.job  tft_semantic_training_0000.job  tft_semantic_training_0010.job  tft_semantic_training_0100.job  tft_semantic_training_0110.job  tft_semantic_training_1000.job  tft_semantic_training_1010.job  tft_semantic_training_1100.job  tft_semantic_training_1110.job
(+5 files in other folders)
